# surfacelab

./: .gitignore  Cargo.toml  README.md  build.rs
i18n/: de-DE.ftl  en-US.ftl
shaders/: accum.comp  alpha_extract.comp  ambient_occlusion.comp  basic.frag  blend.comp  blend_masked.comp  blit-frag.frag  blit-vert.vert  blur.comp  checker.comp  color_adjust.comp  coordinate_transform.comp  directional_warp.comp  distance.comp  filter_env.comp  grayscale.comp  hsv.comp  irradiance.comp  merge.comp  noise_spread.comp  normal.comp  normal_blend.comp  perlin.comp  quad.vert  ramp.comp  range.comp  renderer2d.frag  renderer3d.frag  rgb.comp  scatter.comp  sdf3d.frag  select.comp  shape.comp  split.comp  swizzle.comp  threshold.comp  transform.comp  ui-frag.frag  ui-vert.vert  value.comp  (+2 more)
src/: broker.rs  compute.rs  gpu.rs  lang.rs  lib.rs  main.rs  nodes.rs  render.rs  ui.rs  util.rs
src/compute/: export.rs  external.rs  interpreter.rs  io.rs  mod.rs  shaders.rs  sockets.rs
src/gpu/: basic_mem.rs  compute.rs  mod.rs  render.rs  ui.rs
src/gpu/compute/: allocator.rs  mod.rs  thumbnails.rs
src/gpu/render/: brdf_lut.rs  environment.rs  matcap.rs  mod.rs  renderer2d.rs  sdf3d.rs
src/io/: file.rs  mod.rs
src/lang/: config.rs  mod.rs  operators.rs  parameters.rs  resource.rs  socketed.rs
src/lang/operators/: alpha_extract.rs  ambient_occlusion.rs  blend.rs  blur.rs  checker.rs  color_adjust.rs  coordinate_transform.rs  directional_warp.rs  distance.rs  grayscale.rs  hsv.rs  mod.rs  noise_spread.rs  normal_blend.rs  normal_map.rs  perlin_noise.rs  ramp.rs  range.rs  rgb.rs  scatter.rs  select.rs  shape.rs  split_merge.rs  svg.rs  swizzle.rs  threshold.rs  transform.rs  value.rs  voronoi.rs  warp.rs
src/nodes/: io.rs  layers.rs  mod.rs  nodegraph.rs
src/render/: mod.rs
src/ui/: app.rs  app_state.rs  application.rs  color_picker.rs  color_ramp.rs  color_wheel.rs  colorpicker.rs  export.rs  export_row.rs  exposed_param_row.rs  graph.rs  i18n.rs  layer_row.rs  mod.rs  modal.rs  node.rs  node_area.rs  node_socket.rs  param_box.rs  ramp.rs  render_area.rs  render_events.rs  renderer.rs  renderview.rs  subclass.rs  table.rs  tabs.rs  tiling.rs  tree.rs  util.rs
src/ui/app_state/: collection.rs  graph.rs  layers.rs  mod.rs  resources.rs  undo.rs
src/ui/components/: app.rs  graph_section.rs  layer_editor.rs  mod.rs  node_editor.rs  parameter_section.rs  resource_browser.rs  surface_section.rs  top_bar.rs  viewport.rs
src/ui/graph/: mod.rs  node.rs
src/ui/widgets/: bezier.rs  color_picker.rs  color_ramp.rs  export_row.rs  exposed_param_row.rs  filtered_list.rs  graph.rs  grid.rs  img_resource_editor.rs  layer_row.rs  mod.rs  modal.rs  node.rs  param_box.rs  render_view.rs  resource_editor.rs  resource_row.rs  size_control.rs  tabs.rs  toolbar.rs  transform.rs  tree.rs
src/undo/: actions.rs  mod.rs
surfacelab-derive/: Cargo.toml
surfacelab-derive/src/: lib.rs
test-data/: test1.surf  test2.surf
