[package]
name = "surfacelab"
version = "0.1.0"
authors = ["Paul Ogris <paul@tsahyt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = { version = "0.4.0", features = ["serde"] }
conrod_core = "0.70.0"
conrod_winit = "0.70.0"
crossbeam-channel = "0.4.0"
dialog = "0.3.0"
enum_dispatch = "0.3.1"
enumset = { version = "1.0.1", features = ["serde"] }
env_logger = "0.7.1"
find_folder = "0.3.0"
gfx-backend-vulkan = "0.5.6"
gfx-hal = "0.5.0"
half = "1.4.1"
image = "0.23.0"
itertools = "0.9.0"
libc = "0.2.66"
log = "0.4.8"
maplit = "1.0.2"
multiqueue2 = "0.1.6"
once_cell = "1.3.1"
palette = "0.5.0"
petgraph = { version = "0.5.0", features = ["serde-1"] }
raw-window-handle = "0.3.3"
serde = "1.0.110"
serde-big-array = "0.3.0"
serde_cbor = "0.11.1"
serde_derive = "1.0.110"
smallvec = "1.4.2"
strum = "0.18.0"
strum_macros = "0.18.0"
surfacelab-derive = { version = "0.1.0", path = "surfacelab-derive" }
winit = "0.22.0"
zerocopy = "0.3.0"

[build-dependencies]
shaderc = "0.6"

[dev-dependencies]
approx = "0.3.2"
quickcheck = "0.9.2"
rand = "0.7.3"
