[package]
name = "surfacelab"
version = "0.1.0"
authors = ["Paul Ogris <paul@tsahyt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = { version = "0.4.0", features = ["serde"] }
bincode = "1.3.2"
clokwerk = "0.3.4"
conrod_core = "0.71.0"
conrod_winit = "0.71.0"
crossbeam-channel = "0.4.0"
dialog = "0.3.0"
enclose = "1.1.8"
enum_dispatch = "0.3.5"
enumset = { version = "1.0.2", features = ["serde"] }
env_logger = "0.7.1"
find_folder = "0.3.0"
fluent = "0.13.1"
gfx-auxil = "0.8.0"
gfx-backend-vulkan = "0.6.5"
gfx-hal = "0.6.0"
half = "1.4.1"
id_tree = "1.7.0"
image = "0.23.14"
itertools = "0.9.0"
libc = "0.2.66"
log = "0.4.8"
maplit = "1.0.2"
nalgebra = "0.24.1"
num = "0.3.1"
num_enum = "0.5.1"
palette = "0.5.0"
petgraph = { version = "0.5.0", features = ["serde-1"] }
raw-window-handle = "0.3.3"
resvg = "0.14.1"
rstar = "0.8.2"
serde = "1.0.110"
serde_cbor = "0.11.1"
serde_derive = "1.0.110"
smallvec = "1.4.2"
statrs = "0.13.0"
strum = "0.18.0"
strum_macros = "0.18.0"
surfacelab-derive = { version = "0.1.0", path = "surfacelab-derive" }
thiserror = "1.0.23"
tiny-skia = "0.5.0"
toml = "0.5.8"
unic-langid = { version = "0.9.0", features = ["macros"] }
usvg = "0.14.1"
winit = "0.24.0"
zerocopy = "0.3.0"

[build-dependencies]
shaderc = "0.6"

[dev-dependencies]
approx = "0.3.2"
quickcheck = "0.9.2"
rand = "0.7.3"
